Allow approval users to short-circuit approve Go No Go when status is still Review

--- a/templates/project_contribs.html.twig
+++ b/templates/project_contribs.html.twig
@@ -15,9 +15,9 @@
                     <th rowspan="2">User</th>
                     <th rowspan="2">Role</th>
                     <th colspan="2" class="ui center aligned no-sort">Deployment</th>
-                    <th colspan="7" class="ui center aligned no-sort">Item</th>
+                    <th colspan="5" class="ui center aligned no-sort">Item</th>
                     <th colspan="2" class="ui center aligned no-sort">Checklist</th>
-                    <th rowspan="2" class="ui center aligned collapsing" data-sort-index="13">Activity<br />Created</th>
+                    <th colspan="3" class="ui center aligned no-sort">Activity</th>
                     <th rowspan="2" class="ui center aligned collapsing" data-sort-index="14">Attachment<br />Uploaded</th>
                     <th rowspan="2" class="ui center aligned collapsing" data-sort-index="15"><i class="ui trophy icon"></i></th>
                 </tr>
@@ -29,10 +29,11 @@
                     <th class="ui center aligned collapsing" data-sort-index="6">Reviewed</th>
                     <th class="ui center aligned collapsing" data-sort-index="7">Approved</th>
                     <th class="ui center aligned collapsing" data-sort-index="8">Rejected</th>
-                    <th class="ui center aligned collapsing" data-sort-index="9">Completed</th>
-                    <th class="ui center aligned collapsing" data-sort-index="10">Failed</th>
+                    <th class="ui center aligned collapsing" data-sort-index="9">Created</th>
+                    <th class="ui center aligned collapsing" data-sort-index="10">Updated</th>
                     <th class="ui center aligned collapsing" data-sort-index="11">Created</th>
-                    <th class="ui center aligned collapsing" data-sort-index="12">Updated</th>
+                    <th class="ui center aligned collapsing" data-sort-index="12">Completed</th>
+                    <th class="ui center aligned collapsing" data-sort-index="13">Failed</th>
                 </tr>
             </thead>
             <tbody>
