WIP refactored authentication into separate bundle & implemented OAuth2-based authentication

--- a/templates/admin/user_list.html.twig
+++ b/templates/admin/user_list.html.twig
@@ -65,7 +65,9 @@
                         {% if user.blocked %}
                             <div class="ui red label">Blocked</div>
                         {% else %}
-                            <div class="ui label">{{user.auth}}</div>
+                            {% for cred in user.getCredentials() %}
+                                <div class="ui label">{{cred.driver_id}}</div>
+                            {% endfor %}
                         {% endif %}
                     </td>
                     <td class="ui center aligned">{{'ROLE_ADMIN' in user.roles ? 'Y':'N'}}</td>
